# kiss_ai

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .pylintrc  ACTION_TAKEN_FOR_Y.md  AGENT_READY_STATUS.md  API.md  AWAITING_CLARIFICATION_L.md  AWAITING_CLARIFICATION_w.md  AWAITING_TASK.md  AWAITING_TASK.txt  AWAITING_TASK_SPECIFICATION.md  AWAITING_YOUR_TASK.md  A_REQUEST_CLARIFICATION.md  BLOG.md  CLARIFICATION_FOR_D.md  CLARIFICATION_FOR_d.md  CLARIFICATION_NEEDED.md  CLARIFICATION_REQUEST.md  CLARIFY_REQUEST.txt  CLAUDE.md  COMMON_TASKS_FOR_SORCAR_DEVELOPMENT.md  CONTINUATION_NOTES.md  CURRENT_SESSION_STATUS.md  CURRENT_STATUS.md  Dockerfile  FINAL_CLARIFICATION_REQUEST.md  INTERPRETATION_e.md  INVARIANTS.md  KV_TASK.md  LESSONS.md  LICENSE  PLAN.md  PLEASE_CLARIFY.txt  PROGRESS.md  PROJECT_PROGRESS_REPORT.md  PROJECT_STATUS_REPORT.md  P_REQUEST_CLARIFICATION.md  README.md  (+55 more)
PWD/: AWAITING_TASK.md  SORCAR.md  TASK_CLARIFICATION_y.md
WORK_DIR/: USER_PREF.md
cleverest_plus/: README.md  pyproject.toml
cleverest_plus/benchmark/: build_benchmark.sh
cleverest_plus/benchmark/sources/: decodenum_bug.c  decodenum_safe.c  parselen_bug.c  parselen_safe.c  tokread_bug.c  tokread_safe.c
cleverest_plus/benchmark/subjects/decodenum/bic-01/: issue.json
cleverest_plus/benchmark/subjects/decodenum/bic-01/after/: decodenum
cleverest_plus/benchmark/subjects/decodenum/bic-01/after/decodenum.dSYM/Contents/Resources/DWARF/: decodenum
cleverest_plus/benchmark/subjects/decodenum/bic-01/after/decodenum.dSYM/Contents/Resources/Relocations/aarch64/: decodenum.yml
cleverest_plus/benchmark/subjects/decodenum/bic-01/before/: decodenum
cleverest_plus/benchmark/subjects/decodenum/bic-01/before/decodenum.dSYM/Contents/Resources/DWARF/: decodenum
cleverest_plus/benchmark/subjects/decodenum/bic-01/before/decodenum.dSYM/Contents/Resources/Relocations/aarch64/: decodenum.yml
cleverest_plus/benchmark/subjects/decodenum/bic-01/signature/: reference.txt
cleverest_plus/benchmark/subjects/decodenum/fix-01/: diff.patch  issue.json  message.txt
cleverest_plus/benchmark/subjects/decodenum/fix-01/after/: decodenum
cleverest_plus/benchmark/subjects/decodenum/fix-01/after/decodenum.dSYM/Contents/Resources/DWARF/: decodenum
cleverest_plus/benchmark/subjects/decodenum/fix-01/after/decodenum.dSYM/Contents/Resources/Relocations/aarch64/: decodenum.yml
cleverest_plus/benchmark/subjects/decodenum/fix-01/before/: decodenum
cleverest_plus/benchmark/subjects/decodenum/fix-01/before/decodenum.dSYM/Contents/: Info.plist
cleverest_plus/benchmark/subjects/decodenum/fix-01/before/decodenum.dSYM/Contents/Resources/DWARF/: decodenum
cleverest_plus/benchmark/subjects/decodenum/fix-01/before/decodenum.dSYM/Contents/Resources/Relocations/aarch64/: decodenum.yml
cleverest_plus/benchmark/subjects/decodenum/fix-01/changed_lines/: after.json  before.json
cleverest_plus/benchmark/subjects/decodenum/fix-01/signature/: reference.txt
cleverest_plus/benchmark/subjects/parselen/bic-01/: diff.patch  issue.json  known_crash.input  message.txt
cleverest_plus/benchmark/subjects/parselen/bic-01/after/: parselen
cleverest_plus/benchmark/subjects/parselen/bic-01/after/parselen.dSYM/Contents/Resources/DWARF/: parselen
cleverest_plus/benchmark/subjects/parselen/bic-01/after/parselen.dSYM/Contents/Resources/Relocations/aarch64/: parselen.yml
cleverest_plus/benchmark/subjects/parselen/bic-01/before/: parselen
cleverest_plus/benchmark/subjects/parselen/bic-01/before/parselen.dSYM/Contents/Resources/DWARF/: parselen
cleverest_plus/benchmark/subjects/parselen/bic-01/before/parselen.dSYM/Contents/Resources/Relocations/aarch64/: parselen.yml
cleverest_plus/benchmark/subjects/parselen/bic-01/changed_lines/: before.json
cleverest_plus/benchmark/subjects/parselen/bic-01/signature/: reference.txt
cleverest_plus/benchmark/subjects/parselen/fix-01/: issue.json
cleverest_plus/benchmark/subjects/parselen/fix-01/after/: parselen
cleverest_plus/benchmark/subjects/parselen/fix-01/after/parselen.dSYM/Contents/Resources/DWARF/: parselen
cleverest_plus/benchmark/subjects/parselen/fix-01/before/: parselen
cleverest_plus/benchmark/subjects/parselen/fix-01/before/parselen.dSYM/Contents/: Info.plist
cleverest_plus/benchmark/subjects/parselen/fix-01/before/parselen.dSYM/Contents/Resources/DWARF/: parselen
cleverest_plus/benchmark/subjects/parselen/fix-01/changed_lines/: after.json
cleverest_plus/benchmark/subjects/parselen/fix-01/signature/: reference.txt
cleverest_plus/benchmark/subjects/tokread/bic-01/: diff.patch  issue.json  message.txt
cleverest_plus/benchmark/subjects/tokread/bic-01/after/: tokread
cleverest_plus/benchmark/subjects/tokread/bic-01/after/tokread.dSYM/Contents/: Info.plist
cleverest_plus/benchmark/subjects/tokread/bic-01/after/tokread.dSYM/Contents/Resources/DWARF/: tokread
cleverest_plus/benchmark/subjects/tokread/bic-01/before/: tokread
cleverest_plus/benchmark/subjects/tokread/bic-01/before/tokread.dSYM/Contents/Resources/DWARF/: tokread
cleverest_plus/benchmark/subjects/tokread/bic-01/changed_lines/: after.json  before.json
cleverest_plus/benchmark/subjects/tokread/bic-01/signature/: reference.txt
cleverest_plus/benchmark/subjects/tokread/fix-01/: issue.json  known_crash.input
cleverest_plus/benchmark/subjects/tokread/fix-01/after/: tokread
cleverest_plus/benchmark/subjects/tokread/fix-01/after/tokread.dSYM/Contents/Resources/DWARF/: tokread
cleverest_plus/benchmark/subjects/tokread/fix-01/before/: tokread
cleverest_plus/benchmark/subjects/tokread/fix-01/before/tokread.dSYM/Contents/Resources/DWARF/: tokread
cleverest_plus/benchmark/subjects/tokread/fix-01/signature/: reference.txt
cleverest_plus/campaign_results/: campaign_summary.json  trials.jsonl
cleverest_plus/cleverest_plus/: __init__.py  benchmark.py  campaign.py  core.py  dispatcher.py  llm.py  loop.py  prompt.py
cleverest_plus/scripts/: run_campaign.py  run_smoke_campaign.py
cleverest_plus/tests/: test_core.py  test_dispatcher.py  test_loop.py  test_prompt.py
kv_adversarial/: hydra.cc  (+7 more)
(+2033 files in other folders)
