[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cleverest-plus"
version = "0.1.0"
description = "Hardened, format-aware components for commit-directed regression test generation"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.pyright]
include = ["cleverest_plus", "tests"]
typeCheckingMode = "strict"
reportImplicitRelativeImport = false
